--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,10 @@ authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "~3.8"
-torch = "1.10.1"
+python = "~3.10"
+torch = "^2.1.0"
 pytorch-lightning = "^1.9.5"
-wandb = "0.13.4"
+wandb = "^0.16.0"
 jsonnet = "^0.20.0"
 easydict = "^1.11"
 tqdm = "^4.66.1"
@@ -25,7 +25,7 @@ transformers = "^4.35.0"
 tokenizers = "^0.14.1"
 datasets = "^2.14.6"
 faiss-cpu = "^1.7.4"
-scipy = "1.10.1"
+scipy = "^1.10.1"
 scikit-learn = "^1.3.2"
 tensorboardx = "^2.6.2.2"
 
